frontend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 162623214680.dkr.ecr.ap-northeast-2.amazonaws.com/server-frontend:latest
          ports:
            - containerPort: 80
