frontend/base/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirection
spec:
  redirectScheme:
    scheme: https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-frontend-redirect
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`the-form.io`)
      services:
        - name: frontend
          port: 80
      middlewares:
        - name: https-redirection
  tls: {}

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-frontend
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`the-form.io`)
      services:
        - name: frontend
          port: 80
  tls: {}
